--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ h1 {
     font-size: 3.5em;
     letter-spacing: 2px;
 }
+h3{
+    line-height: 1.5em;
+    font-size: 1.3em;
+}
 
 .me {
     color: rgb(7, 143, 167);
