--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ h1 {
     font-size: 3.5em;
     letter-spacing: 2px;
 }
-h3{
+
+h3 {
     line-height: 1.5em;
     font-size: 1.3em;
 }
@@ -23,16 +24,43 @@ h3{
     color: rgb(7, 143, 167);
 }
 
-.header-padding {
-    padding-top: 5em;
+.aboutme {
+    float: left;
+    width: 75%;
+}
+
+.photo {
+    float: right;
+    padding-right: 4em;
+    padding-top: 4em;
+}
+
+.experience {
+    float: left;
+    height: 200px;
+    width: 50%;
+}
+
+.skills {
+    float: right;
+    height: 200px;
+    width: 50%;
+
+}
+
+.card {
+    padding: 10px 20px 10px 20px;
+    font-weight: 700;
+    color: rgba(16, 164, 250, 0.5);
+ }
+
+.responsibility {
+    
+    padding: 20px;
+    clear: both;
 }
 
 .image-padding {
     padding-left: 50%;
     padding-right: 100%;
-}
-
-p {
-    letter-spacing: 0em;
-    padding-right: 50%;
 }
